# postit_localize

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  detect.h  detect_try.h  postit_detect  postit_detect.cpp  select_search  select_search.cpp
